samples/_failures_safe/1761075076_5e6143_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c33b37f.c: In function ‘main’:
./samples/SAFE/__tmp_7c33b37f.c:160:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  160 |     int operation_count
      |     ^~~
./samples/SAFE/__tmp_7c33b37f.c:160:5: error: expected declaration or statement at end of input
